# dxsvelte

./: .gitignore  .npmignore  .prettierrc  README.md  manage.py  package.json  pyproject.toml  setup.cfg  tsconfig.json
src/: build.ts  compile.ts  configurator.ts  debug.ts  django.ts  dxsvelte.d.ts  dxsvelte.py  dxsvelte.ts  entrypoint-compiler.ts  entrypoint-init.ts  python.ts  types.ts  vite.config.js
src/client/: common.$.ts  data.$.js  dxs.$.ts  page.$.ts  router.$.js  router.$.ts
src/client-types/: @common.ts  @page.ts
src/compiler/: collate.ts  compile.ts  injector.ts  restart.ts  utils.ts
src/core-static/: app.svelte  common.ts  entrypoint-csr.js  entrypoint-ssr.js  router.ts
src/django/: addFiles.ts  dxsvelte.$.py  package.$.json  tsconfig.$.json
src/dxsvelte/: __init__.py  dxsvelte.py  manage_commands.py
src/dxsvelte/management/commands/: rundx.py
src/resolver/: routerResolver.$.py  routerResolver.ts  routerTranslate.ts  routerTypes.ts
src/settings/: config.ts  pythonVersion.ts
src/svelte/templates/: entrypoint-csr.$.js  entrypoint-ssr.$.js  layout.$.svelte  root.$.svelte
