[metadata]
name = dxsvelte
version = 0.2.0a20

[options]
packages = dxsvelte
install_requires =
    django
    py-mini-racer
    watchdog

[options.packages.find]
where = src/

[options.package_data]
dxsvelte = *.py, management/commands/*.py, management/*.py

[options.entry_points]
console_scripts =
    run = dxsvelte.manage_commands:run_command
    mkm = dxsvelte.manage_commands:run_command
    migrate = dxsvelte.manage_commands:run_command